--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "js/app.js",
   "scripts": {
-    "webpack": "webpack"
+    "dev": "webpack -d --watch",
+    "build": "webpack -p"
   },
   "author": "Matt Wills",
   "license": "GPL-2.0",
@@ -17,6 +18,10 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
   }
 }
