--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
     "node-sass": "^4.5.3",
+    "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
