--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.5.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.6.0"
   }
