--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Matt Wills",
   "license": "GPL-2.0",
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
