--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "GPL-2.0",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
@@ -21,11 +22,14 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "font-awesome-sass-loader": "^2.0.1",
     "node-sass": "^4.5.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
+    "url-loader": "^0.5.9",
     "webpack": "^3.6.0"
   }
 }
