--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immutable": "^3.8.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-flip-move": "^2.9.15",
     "redux-promise": "^0.5.3"
   },
   "devDependencies": {
