--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "immutable": "^3.8.2",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-file-reader": "^1.1.2",
     "react-flip-move": "^2.9.15",
     "redux-promise": "^0.5.3"
   },
