--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^15.0.0",
     "react-file-reader": "^1.1.2",
     "react-flip-move": "^2.9.15",
-    "redux-promise-middleware": "^4.4.1"
+    "redux-promise-middleware": "^4.4.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
